--- a/frontend/src/Pages/Quiz/quiz.css
+++ b/frontend/src/Pages/Quiz/quiz.css
@@ -12,8 +12,8 @@ body {
 }
 
 body {
-	background-color: #7cc6fe;
-	display: flex;
+	background-color: #efacac;
+	/* display: flex; */
 	justify-content: center;
 	align-items: center;
 	min-height: 100vh;
