--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -60,21 +60,6 @@ body{
     border: 1px solid black;
 
 }
-p.quote1{
-    font-style: italic;
-    display: flex;
-}
-.quote .p1{
-    margin-top: 10px;
-    margin-bottom: 10px;
-    font-style: italic;
-}
-.quote .p2 {
-    font-size: 10px;
-}
-.quote .p3{
-    font-size: 10px;
-}
 .accounts span{
     font-size: 20px;
 }
@@ -128,14 +113,7 @@ p.quote1{
 .login .bottom{
     height: 30%;
 }
-.login .bottom .quote3{
-    font-style: italic;
-    margin-top: 25px;
-    margin-bottom: 15px;
-    line-height: 1.8;
-    font-weight: 600;
-    align-items: center;
-}
+
 .bottom .P5,
 .bottom .P6{
     font-size: 12px;
@@ -233,6 +211,9 @@ p.quote1{
 }
 .PasswordInputContainer2 {
     position: relative;
+}
+.grouped select{
+    margin-left: 40%;
 }
 .grouped span{
     margin-left: 40%;
@@ -341,6 +322,17 @@ p.quote1{
     font-size: 41px;
     font-weight: 600;  
 }
+.signUp .Sect4 .grouped select{
+    margin-left: auto;
+    display: flex;
+    justify-content: flex-end;
+    align-items:end;
+    width: 100%;
+    margin: 0 auto;
+    top: 0%;
+    right: 0; 
+    margin-top: 1%;   
+}
 .signUp .Sect4 .grouped{
     margin-left: auto;
     display: flex;
@@ -352,14 +344,7 @@ p.quote1{
     right: 0; 
     margin-top: 1%;   
 }
-.quote .p1{
-    font-size: 20px;
-    font-style: 'Poppins';
-    padding: 10px;
-}
-.quote .p3{
-    padding: 5px;
-}
+
 .agree .Link{
     margin-top:auto;
     margin-bottom:auto;
@@ -386,6 +371,16 @@ p.quote1{
 .Sect4 .Already span{
     color:black;
 }
+.grouped>select{
+    border: 1px solid #aaa;
+    padding: 10px;
+    width: 100%;
+    height: 50px;
+    border-radius: 5px;
+    margin-top: 10px;
+    color: #000;
+    background-color: white;
+}
 .grouped>input{
     border: 1px solid #aaa;
     padding: 5px;
@@ -394,9 +389,14 @@ p.quote1{
     border-radius: 5px;
     margin-top: 10px;
     color: #000;
+    
 }
 .grouped>input:hover,
 .grouped>input:focus{
+    outline: 1px solid #61dafb;
+}
+.grouped>select:hover,
+.grouped>select:focus{
     outline: 1px solid #61dafb;
 }
 
