--- a/frontend/src/css/footer.css
+++ b/frontend/src/css/footer.css
@@ -2,5 +2,6 @@
     height: 25px;
     background-color: rgb(190, 195, 195, 1);
     padding: 20px;
-
+    margin-top: calc(100vh-75px);
+    /* margin-top: 20vh; */
 }
