--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -1,12 +1,37 @@
 .All {
-    font-family: 'Poppins';
     display: flex;
-    
 }
 body{
     margin: 0px;
     text-align: center;
-    color: #000;
+    color: #fff;
+    background-color:#efacac;
+}
+.section1{
+    height: 80vh;
+    display: flex;
+    margin: 5% 5% 0 5%;
+}
+.section1 .left{ 
+    width: 50%;
+    align-items: right;
+}
+.section1 .left img{
+    width: 100%;
+    height: 100%;
+    border-radius: 3px;
+    height: 50vh;
+    padding: 2%;
+}
+.section1 .right{
+    align-items: left;
+    width: 50%;
+}
+.content{
+    /* align-items: right; */
+    /* flex-direction: column; */
+    padding: 2%;
+    margin-left: 20px;
 }
 .All .Sect1 .GroupSavings{
     font-size: 30px;
@@ -101,7 +126,6 @@ body{
 
 .login{
     height: 100vh;
-    font-family: 'Poppins';
     /* margin: 10px; */
     margin: 5% 5% 0 5%;
 }
@@ -150,7 +174,7 @@ body{
 }
 .VisibilityIcon{
     position: absolute;
-    top: 30%;
+    top: 60%;
     right: 27%;
     transform: translateY(-50%);
     cursor: pointer;
@@ -269,7 +293,6 @@ body{
 
 .signUp{
     height: 100vh;
-    font-family: 'Poppins';
     display: flex;
     margin: 5% 5% 0 5%;
 }
@@ -328,10 +351,11 @@ body{
     justify-content: flex-end;
     align-items:end;
     width: 100%;
-    margin: 0 auto;
+    /* margin: 0 auto; */
     top: 0%;
     right: 0; 
-    margin-top: 1%;   
+    margin-top: 1%;  
+    color: #6b6969; 
 }
 .signUp .Sect4 .grouped{
     margin-left: auto;
@@ -373,7 +397,7 @@ body{
 }
 .grouped>select{
     border: 1px solid #aaa;
-    padding: 10px;
+    padding: 10px 10px 15px 3px;
     width: 100%;
     height: 50px;
     border-radius: 5px;
