--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -283,7 +283,10 @@ body{
    color: #fff;
    font-weight: 600;
 }
-
+.logout{
+    display: flex;
+    margin-left: 500px;
+}
 
 .login .top .form-sect
 
