--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -6,7 +6,7 @@ body{
     text-align: center;
     color: #000;
     background-color:rgb(234, 236, 227);
-    /* background-color: #f7c5e6; */
+    /* background-color: white; */
 }
 .section1{
     height: 80vh;
