--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -56,6 +56,7 @@ body {
 }
 .nav-elements ul li button{
   background-color: #fcfcfc;
+  max-width: 100px;
 }
 .nav-elements ul {
   display: flex;
@@ -81,7 +82,12 @@ body {
 }
 @media (max-width: 768px) {
   .nav-elements ul li:not(:last-child) {
-    margin-right: 30px;
+    margin-right: 60px;
+  }
+  .menu-icon {
+    display: block;
+    cursor: pointer;
+    color: #ffffff;
   }
 }
 
@@ -96,6 +102,7 @@ body {
     right: 0;
     top: 60px;
     background-color: #fef7e5;
+    /* background-color: #da70b7; */
     width: 0px;
     height: calc(100vh - 60px);
     transition: all 0.3s ease-in;
@@ -114,6 +121,10 @@ body {
   .nav-elements ul li {
     margin-right: unset;
     margin-top: 22px;
+  }
+  .navbar .logo img{
+    /* margin-top: -10px; */
+    /* height: auto; */
   }
 }
 
