--- a/frontend/src/css/footer.css
+++ b/frontend/src/css/footer.css
@@ -1,10 +1,11 @@
 .footer{
     height: 30px;
-    background-color: rgb(190, 195, 195, 1);
+    background-color: rgb(157,161,161);
     padding: 35px;
     margin-top: calc(100vh-85px);
     justify-content: space-between;
     /* margin-top: 20vh; */
+    color: #ffffff;
 }
 .footer span{
     margin: 10px;
