--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -492,6 +492,25 @@ body{
         align-items: center;
         width: 100%;
       }
+      .section1{
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        /* justify-content: center; */
+        align-items: center;
+      }
+      .section1 .left img{
+        display: none;
+      }
+      .section1 .leftside img{
+        display: none;
+      }
+      .section1 .right {
+        width: 100%;
+      }
+      .section1 .rightside{
+        width: 100%;
+      }
 }
 @media (max-width: 700px) {
     .PasswordVisibilityIcon {
